# tb-extractor

./: README.md  pyproject.toml
tb_extractor/: __main__.py  extractor.py
