[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tb-extractor"
description = 'A tool to extract scalars and images from TensorBoard logs.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zegang Cheng", email = "zc2309@nyu.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  'tensorboard',
  'pandas',
  'Pillow',
  'click',
  'tqdm',
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/chengzegang/tb-extractor#readme"
Issues = "https://github.com/chengzegang/tb-extractor/issues"
Source = "https://github.com/chengzegang/tb-extractor"

[tool.hatch.version]
path = "tb_extractor/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tb_extractor --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "tb_extractor/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
